--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -36,6 +36,7 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
+        chmod +x bin/loxby
         printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
         gem build *.gemspec
         gem push *.gem
