--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -17,7 +17,7 @@ jobs:
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.1.x
+        ruby-version: 3.1.3
 
     - name: Publish to GPR
       run: |
@@ -36,6 +36,7 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
+        chmod +x bin/loxby
         printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
         gem build *.gemspec
         gem push *.gem
