Code cleanup & version increment (#2)
* Fix bug in interpreter with grouping expressions

Before this commit, AST nodes representing grouping expressions would yield themselves instead of their children in the Interpreter, leading to an infinite loop.

* Clean up code and comments and update Ruby versions in every configuration file

* Remove hardcoded configuration and lists from various files; add dry-configuration as a dependency

* Update .rubocop.yml

* Use configuration to match single-character tokens rather than hardcoding in scanner.rb

* Rubocop compliance pass

* Add github_repo metadata to .gemspec

* Move exit codes to configuration

* Add native function "exit()" which exits normal and REPL execution

* Update ASTPrinter visitor with new expression types

* Increment version number (0.0.2 -> 0.0.3)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,11 @@
 AllCops:
-  TargetRubyVersion: 3.1.3
+  TargetRubyVersion: 3.3.5
 
 Metrics/ClassLength:
   Enabled: false
 
 Lint/BooleanSymbol:
+  Enabled: false
+
+Style/HashEachMethods:
   Enabled: false
