--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        ruby-version: ['3.4.4', '3.3', '3.2']
+        ruby-version: ['3', '3.0', '3.1', '3.2', '3.3', '3.4']
     
     steps:
     - uses: actions/checkout@v4
@@ -28,4 +28,4 @@ jobs:
     
     - name: Run RuboCop
       run: bundle exec rubocop
-      if: matrix.ruby-version == '3.4.4' # Only run linting on one Ruby version
+      if: matrix.ruby-version == '3.4' # Only run linting on one Ruby version
